# mlsd-chatapp

./: CLAUDE.md  Cargo.toml  Justfile  README.md  docker-compose.yml  justfile
migrations/: 20260523180146_create_users.down.sql  20260523180146_create_users.up.sql  20260525055614_create_conversations_and_messages.down.sql  20260525055614_create_conversations_and_messages.up.sql  20260721034808_create_users.down.sql  20260721034808_create_users.up.sql  20260723023338_create_conversations_and_messages.down.sql  20260723023338_create_conversations_and_messages.up.sql
server/: Cargo.toml
server/src/: auth.rs  conversations.rs  login.rs  main.rs  messages.rs  signup.rs
