[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
dotenvy = "0.15.7"
redis = { version = "1.2.1", features = ["aio", "tokio-comp", "connection-manager"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.52.3", features = ["full"] }
