[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.9"
dotenvy = "0.15.7"
rand_core = { version = "0.6", features = ["getrandom"] }
redis = { version = "1.2.1", features = [
  "aio",
  "tokio-comp",
  "connection-manager",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "uuid"] }
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.1", features = ["v7", "serde"] }
