[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = {version = "1", features = ["full"]}
sqlx = {version = "0.8", features = ["runtime-tokio", "postgres", "uuid"]}
dotenvy = "0.15"
redis = {version = "0.27", features = ["tokio-comp", "connection-manager"]}
argon2 = "0.5"
uuid = {version = "1", features = ["v7", "serde"]}
serde = { version = "1", features = ["derive"]}
serde_json = "1"
base64 = "0.22"
